--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^9|^10|^11",
-        "illuminate/database": "^9|^10|^11"
+        "illuminate/support": "^9|^10|^11|^12",
+        "illuminate/database": "^9|^10|^11|^12"
     },
     "extra": {
         "laravel": {
