--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "Shkiper\\ActivityLog\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Shkiper\\ActivityLog\\Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Oleksandr Pavlenko"
@@ -21,13 +26,17 @@
         "illuminate/support": "^12",
         "illuminate/database": "^12"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^11.0",
+        "orchestra/testbench": "^10.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
-                "YourName\\ActivityLog\\ActivityLogServiceProvider"
+                "Shkiper\\ActivityLog\\ActivityLogServiceProvider"
             ],
             "aliases": {
-                "ActivityLog": "YourName\\ActivityLog\\Facades\\ActivityLog"
+                "ActivityLog": "Shkiper\\ActivityLog\\Facades\\ActivityLog"
             }
         }
     }
