--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -24,4 +24,4 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHPUnit tests with coverage
-        run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover coverage.xml
+        run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml
