Add github actions

--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -25,3 +25,11 @@ jobs:
 
       - name: Run PHPUnit tests with coverage
         run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
