--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -24,12 +24,9 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHPUnit tests with coverage
-        run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml
+        run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text --coverage-clover coverage.xml .
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
