--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Install Composer dependencies
         run: composer self-update && composer install && composer dump-autoload
       - name: Run tests and collect coverage
-        run: vendor/bin/phpunit --coverage-clover coverage.xml .
+        run: vendor/bin/phpunit --coverage-clover coverage.xml
+        with:
+          file: ./coverage.xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         env:
